--- a/TrainR/MainWindow.xaml
+++ b/TrainR/MainWindow.xaml
@@ -16,10 +16,10 @@
             <ColumnDefinition Width="69"/>
             <ColumnDefinition Width="106*"/>
         </Grid.ColumnDefinitions>
-        <ComboBox Grid.Row="0" Grid.Column="0" Margin="10,10,10,10"/>
-        <ComboBox Grid.Row="0" Grid.Column="2" Margin="10,10,10,10"/>
+        <ComboBox x:Name="StartBox" Grid.Row="0" Grid.Column="0" Margin="10,10,10,10" SelectionChanged="StartBox_SelectionChanged"/>
+        <ComboBox x:Name="DestinationBox" Grid.Row="0" Grid.Column="2" Margin="10,10,10,10" SelectionChanged="DestinationBox_SelectionChanged"/>
         
-        <DataGrid Grid.Row="1" Grid.ColumnSpan="3" Margin="10"/>
+        <DataGrid x:Name="grid" Grid.Row="1" Grid.ColumnSpan="3" Margin="10"/>
 
     </Grid>
 </Window>
