Added login and user adding and removing and gites :)

--- a/TrainR-Admin/MainWindow.xaml
+++ b/TrainR-Admin/MainWindow.xaml
@@ -27,8 +27,7 @@
             </MenuItem>
             <MenuItem Header="Users" Margin="274,0,0,0">
                 <MenuItem Header="Add" Click="AddUser_Click"/>
-                <MenuItem Header="Remove"/>
-                <MenuItem Header="List"/>
+                <MenuItem Header="Remove" Click="RemoveUser_Click" />
             </MenuItem>
         </Menu>
         <Grid Grid.Row="1">
