--- a/TrainR/MainWindow.xaml
+++ b/TrainR/MainWindow.xaml
@@ -5,10 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TrainR"
         mc:Ignorable="d"
-        Title="MainWindow" Height="468" Width="507">
+        Title="MainWindow" Height="502" Width="507">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="49.409"/>
+            <RowDefinition Height="54"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -16,10 +16,16 @@
             <ColumnDefinition Width="69"/>
             <ColumnDefinition Width="106*"/>
         </Grid.ColumnDefinitions>
-        <ComboBox x:Name="StartBox" Grid.Row="0" Grid.Column="0" Margin="10,10,10,10" SelectionChanged="StartBox_SelectionChanged"/>
-        <ComboBox x:Name="DestinationBox" Grid.Row="0" Grid.Column="2" Margin="10,10,10,10" SelectionChanged="DestinationBox_SelectionChanged"/>
-        
-        <DataGrid x:Name="grid" Grid.Row="1" Grid.ColumnSpan="3" Margin="10"/>
+        <StackPanel Grid.Row="0" Grid.Column="0">
+            <Label Content="From:" Height="19" Padding="0,0,0,5" Width="197" />
+            <ComboBox x:Name="StartBox"  Margin="10,10,10,10" SelectionChanged="StartBox_SelectionChanged"/>
+        </StackPanel>
+        <StackPanel Grid.Row="0" Grid.Column="2">
+            <Label Content="To:" Height="19" Padding="0,0,0,5" Width="196" />
+            <ComboBox x:Name="DestinationBox"  Margin="10,10,10,10" SelectionChanged="DestinationBox_SelectionChanged"/>
+        </StackPanel>
+
+        <DataGrid x:Name="grid" Grid.Row="1" Grid.ColumnSpan="3" Margin="10,10,10,10"/>
 
     </Grid>
 </Window>
